[package]
name = "idp-console"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.79"
axum = "0.7.5"
chrono = { version = "0.4.37", features = ["serde"] }
deadpool-postgres = "0.13.0"
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
regex = "1.10.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
tokio-postgres = { version = "0.7.10", features = [
  "with-uuid-0_8",
  "with-serde_json-1",
  "with-chrono-0_4"
] }
tower-http = { version = "0.5.2", features = ["cors", "fs"] }
validator = { version = "0.17.0", features = ["derive"] }

[profile.release]
opt-level = 3
